Added sparkle config

--- a/project.yml
+++ b/project.yml
@@ -25,7 +25,7 @@ targets:
       ENABLE_HARDENED_RUNTIME: YES
       DEAD_CODE_STRIPPING: YES
     postCompileScripts:
-      - script: ./Scripts/Lint/swiftlint lint --quiet
+      - script: |
+          ./Scripts/Lint/swiftlint --fix
+          ./Scripts/Lint/swiftlint lint --quiet
         name: Swiftlint
-    dependencies:
-      - package: Sparkle
